@@ -153,16 +153,16 @@ set(CALAMARES_DESCRIPTION_SUMMARY "The distribution-independent installer framew
 # NOTE: update these lines by running `txstats.py`, or for full automation
 #       `txstats.py -e`. See also
 #
-# Total 75 languages
-set( _tx_complete az az_AZ ca fi_FI fr he hr ja ko lt pt_BR pt_PT
-    sv tr_TR uk zh_TW )
-set( _tx_good as be ca@valencia cs_CZ da de es fa fur hi it_IT ml
-    nl ru si sk sq tg vi zh_CN )
-set( _tx_ok ar ast bg bn el en_GB es_MX et eu gl hu id is mr nb oc
-    pl ro sl sr sr@latin th )
-set( _tx_incomplete eo es_PR gu ie ja-Hira kk kn lo lv mk ne_NP
-    ta_IN te ur uz zh zh_HK )
-# Total 75 languages
+# Total 80 languages
+set( _tx_complete az_AZ ca en es fi_FI fr he hr ja lt pl sq sv
+    tr_TR uk zh_TW )
+set( _tx_good as az be bg ca@valencia cs_CZ da de fa fur hi is
+    it_IT ko nl pt_BR pt_PT ru si sk tg vi zh_CN )
+set( _tx_ok ar ast bn el en_GB eo es_AR es_MX et eu gl hu id ml mr
+    nb oc ro sl sr sr@latin th )
+set( _tx_incomplete bqi es_PR gu ie ja-Hira ka kk kn lo lv mk ne_NP
+    ro_RO ta_IN te ur uz zh zh_HK )
+# Total 80 languages
 
 ### Required versions
 #
@@ -507,6 +507,10 @@ if(tx_errors)
 endif()
 
 set(CALAMARES_TRANSLATION_LANGUAGES en ${_tx_complete} ${_tx_good} ${_tx_ok})
+if(NOT CALAMARES_RELEASE_MODE)
+    # Outside of release mode, enable all the languages
+    list(APPEND CALAMARES_TRANSLATION_LANGUAGES ${_tx_incomplete})
+endif()
 list(SORT CALAMARES_TRANSLATION_LANGUAGES)
 
 add_subdirectory(lang) # i18n tools
