@@ -25,6 +25,10 @@ This release contains contributions from (alphabetically by first name):
  - Coding style now wants clang-format 15 or 16, but no longer needs astyle.
    There is also a clang-tidy file for additional styling support.
  - Ongoing translation improvements. (thanks Emir)
+ - Translations for bqi (Luri), es_AR (Castellano), eo (Esperanto),
+   ka (Georgian). In **non-release** builds (e.g. between releases,
+   so for developers building directly from git) all translations are
+   enabled, even the ones with no translations at all.
 
 ## Modules ##
  - All QML modules now have a Qt6-compatible set of QML files as well. (thanks Anke)
